fix(memory): harden persistence, recall, and user data controls
Normalize memory scopes and migrate legacy rows; bind mutations to request identity and epoch; make reset recovery fail closed without crashing startup.

Restore useful working and episodic recall, add scoped memory deletion and legacy preference references, and harden intent checks, prompt projection, and structured outcomes.

Include regression tests, Room v14 schema, and the memory review and implementation record. Validated with 1281 JVM tests and targeted device regressions.

(cherry picked from commit 41619fae03c3c6e542c13a46cbe2c276fd1a0898)